# try_verilator

./: .gitignore  LICENSE  README.md
01_apb/: Makefile  README.md
01_apb/rtl/: clk_gate.sv  dut_reg.sv
01_apb/tb/: apb_if.sv  tb_top.sv
sysc/01_sc_apb/: CMakeLists.txt  README.md  sc_main.cpp
sysc/01_sc_apb/rtl/: dut_top.v
sysc/01_sc_apb/tb/: apb_req.cpp  apb_req.hpp
